--- a/lesson-17/css/style.css
+++ b/lesson-17/css/style.css
@@ -466,7 +466,7 @@
    background-color: #04011f;
    color: #ffffff;
    margin-bottom: 0;
-   padding: 50px 0;
+   padding: 30px 0;
 }
 
 .third-model__container {
@@ -494,78 +494,121 @@
    border-radius: 5px;
 }
 
+/* --------------------------- */
 .fourth-model {
    background-color: #37393f;
    font-family: 'Inter', sans-serif;
    color: #ffffff;
-   display: flex;
-   justify-content: space-between;
-   gap: 30px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 500px) {
    .fourth-model {
-      --width: 100%;
-      gap: calc(var(--width) / 20);
+      display: flex;
+      justify-content: center;
+      column-gap: 10px;
+   }
+}
+
+@media (min-width: 1000px) {
+   .fourth-model {
+      column-gap: 40px;
    }
 }
 
 @media (min-width: 1250px) {
    .fourth-model {
-      gap: 77px;
+      column-gap: 75px;
    }
 }
+/* --------------------------- */
 
 .fourth-model__left-path {
    flex: 1 1 100%;
 }
 
+@media (min-width: 500px) {
+   .fourth-model__left-path {
+      flex: 1 1 65%;
+   }
+}
+
 @media (min-width: 768px) {
+   .fourth-model__left-path {
+      flex: 1 1 60%;
+   }
+}
+
+@media (min-width: 1000px) {
    .fourth-model__left-path {
       flex: 1 1 50%;
    }
 }
 
-@media (max-width: 669.98px) {
+.fourth-model__right-path {
+   background: url('../img/fourth-model/bg.webp') 20% / cover no-repeat;
+   width: 0;
+   min-height: 100%;
+}
+
+@media (min-width: 500px) {
    .fourth-model__right-path {
-      display: none;
+      flex: 1 1 35%;
    }
 }
 
-@media (min-width: 670px) {
+@media (min-width: 768px) {
    .fourth-model__right-path {
-      background: url('../img/fourth-model/bg.webp') 20% / cover no-repeat;
       flex: 1 1 45%;
-      min-height: 100%;
    }
 }
+
+/* --------------------------- */
 
 .fourth-model__container {
+   margin: 0 0 0 auto;
    max-width: 640px;
-   padding: 50px 5px;
+   padding: 30px 5px;
+}
+
+@media (min-width: 500px) {
+   .fourth-model__container {
+      padding: 30px 15px;
+   }
 }
 
 @media (min-width: 768px) {
    .fourth-model__container {
-      margin-left: auto;
-      margin-right: 0;
-      padding: 80px 15px;
+      padding: 50px 15px;
+   }
+}
+
+@media (min-width: 1000px) {
+   .fourth-model__container {
+      padding: 65px 15px;
    }
 }
 
 @media (min-width: 1250px) {
    .fourth-model__container {
-      padding: 138px 15px;
+      padding: 75px 15px;
    }
 }
 
 .fourth-model__container > * {
-   margin-bottom: 36px;
+   margin-bottom: 30px;
 }
 
-.fourth-model__text-wrapper > * {
-   margin-bottom: 13px;
+@media (min-width: 768px) {
+   .fourth-model__container > * {
+      margin-bottom: 35px;
+   }
 }
+/* ------------------------------- */
+
+.fourth-model__text-wrapper > * {
+   margin-bottom: 15px;
+}
+/* ------------------------------- */
 
 .fourth-model__section-title {
    font-weight: 500;
@@ -574,22 +617,29 @@
    display: flex;
    align-items: baseline;
    column-gap: 6px;
-   width: max-content;
+   max-width: 370px;
 }
 
 .fourth-model__section-title::before {
    content: '';
    background-color: #40ddb6;
    width: 12px;
+   flex: 0 0 12px;
    height: 12px;
 }
 
 .fourth-model__sub-title {
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
-   font-size: 30px;
+   font-size: 26px;
    line-height: 1.21;
    max-width: 370px;
+}
+
+@media (min-width: 750px) {
+   .fourth-model__sub-title {
+      font-size: 30px;
+   }
 }
 
 .fourth-model__text {
@@ -598,22 +648,35 @@
    line-height: 1.46;
    max-width: 572px;
 }
+/* -------------------------------- */
 
-.fourth-model__list {
+.cards {
    display: flex;
    flex-wrap: wrap;
-   row-gap: 30px;
-   margin-left: -7px;
-   margin-right: -7px;
+   row-gap: 5px;
+   margin-left: -5px;
+   margin-right: -5px;
 }
 
 .cards__column {
-   flex: 1 0 100%;
-   padding-left: 7px;
-   padding-right: 7px;
+   flex: 1 1 100%;
+   padding-left: 5px;
+   padding-right: 5px;
 }
 
-@media (min-width: 430px) {
+@media (min-width: 425px) {
+   .cards__column {
+      flex: 0 1 50%;
+   }
+}
+
+@media (min-width: 500px) {
+   .cards__column {
+      flex: 1 1 100%;
+   }
+}
+
+@media (min-width: 768px) {
    .cards__column {
       flex: 1 1 50%;
    }
@@ -621,38 +684,39 @@
 
 .cards__item {
    display: flex;
-   align-items: center;
-   gap: 12px;
-   padding: 20px;
+   flex-wrap: wrap;
+   gap: 10px;
+   padding: 15px;
+   min-height: 100%;
    background-color: #2e2f34;
-}
-
-@media (min-width: 430px) {
-   .cards__item {
-      flex-direction: column;
-   }
 }
 
 @media (min-width: 768px) {
    .cards__item {
-      flex-direction: row;
+      padding: 20px;
+      flex-wrap: nowrap;
    }
 }
 
-@media (min-width: 930px) {
+@media (min-width: 1000px) {
    .cards__item {
-      flex-direction: column;
+      padding: 25px;
    }
 }
 
 @media (min-width: 1250px) {
    .cards__item {
-      flex-direction: row;
+      padding: 25px;
    }
 }
 
-.cards__item > * {
+.cards__block-percentage {
    flex: 0 0 auto;
+}
+
+.cards__info-block {
+   padding-top: 15px;
+   flex: 0 1 auto;
 }
 
 .cards__title {
@@ -667,6 +731,7 @@
    line-height: 1.5;
 }
 
+/* ------------------------------ */
 .fourth-model__statistics {
    display: flex;
    align-items: center;
@@ -762,6 +827,7 @@
 .second-model__container > *:last-child,
 .producs-list__item > *:last-child,
 .third-model__container > *:last-child,
+.fourth-model__container > *:last-child,
 .fourth-model__content > *:last-child,
 .fourth-model__text-wrapper > *:last-child {
    margin-bottom: 0;
