--- a/lesson-15/css/base.css
+++ b/lesson-15/css/base.css
@@ -13,15 +13,16 @@
 
 .header,
 .footer {
-   padding: 30px 0;
+   padding: 10px 0;
 }
 
 .practice {
-   padding: 50px 0;
+   padding: 10px 0;
 }
 
 .header__container > *,
 .footer__container > * {
+   min-height: 60px;
    margin-bottom: 30px;
 }
 
