--- a/lesson-16/css/style.css
+++ b/lesson-16/css/style.css
@@ -75,21 +75,20 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .header {
+   padding: 10px 0;
+   margin: 0;
+}
+
+.header__container {
    display: flex;
    align-items: center;
    justify-content: center;
-   padding: 15px 0;
-   margin: 0;
-   min-height: 100px;
-}
-
-.header--mb {
-   margin-bottom: 50px;
+   min-height: 80px;
 }
 
 .footer {
-   padding: 15px 0;
-   min-height: 100px;
+   padding: 10px 0;
+   min-height: 80px;
 }
 
 .footer__container > * {
@@ -97,6 +96,7 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .nav {
+   flex: 1 1 auto;
    display: flex;
    align-items: center;
    justify-content: center;
