--- a/lesson-18/css/style.css
+++ b/lesson-18/css/style.css
@@ -1,6 +1,7 @@
 /* Підключення шрифтів */
-@import url('https://fonts.googleapis.com/css?family=Merriweather:regular,700,700italic&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Merriweather:regular,500,600,700,500italic,600italic,700italic&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ephesis:regular&display=swap');
 
 /* Скидаємо стилі */
 @import url('reset.css');
@@ -16,7 +17,7 @@
 
 /* -------------------------------------------- */
 body {
-   background-color: transparent;
+   background-color: #fbf8ef;
    color: #000000;
    font-family: 'Cormorant Infant', serif;
    font-size: 20px;
@@ -26,6 +27,18 @@ body {
    max-width: 1200px;
    padding: 0 15px;
    margin: 0 auto;
+}
+
+.footer__container {
+   padding-top: 10px;
+   padding-bottom: 10px;
+}
+
+.footer__name {
+   font-family: 'Ephesis', cursive;
+   font-size: 30px;
+   line-height: 2;
+   text-align: center;
 }
 
 /* example */
@@ -62,7 +75,7 @@ body {
    font-family: 'Merriweather', sans-serif;
    font-weight: 700;
    font-style: italic;
-   font-size: 30px;
+   font-size: 20px;
 }
 
 .menu {
@@ -87,6 +100,7 @@ body {
    font-size: 20px;
    color: #000;
    padding: 5px;
+   line-height: 1.2;
    border-bottom: 1px solid transparent;
    outline: 1px solid transparent;
    transition: all 0.3s linear;
@@ -167,13 +181,13 @@ body {
    color: #000;
    min-width: 100%;
    padding: 15px 10px;
-   background-color: #b99260;
+   background-color: #825e3e;
    transition: all 0.3s linear;
 }
 
 @media (any-hover: hover) {
    .sub-menu__link:hover {
-      background-color: #d58417;
+      background-color: #af621f;
       color: #fff;
    }
 }
@@ -190,6 +204,7 @@ body {
 .actions-header__item {
    position: relative;
    flex: 0 0 32px;
+   height: 32px;
    transition: transform 0.3s linear;
 }
 
@@ -197,10 +212,6 @@ body {
    .actions-header__item:hover {
       transform: scale(1.1);
    }
-}
-
-.actions-header__item img {
-   min-width: 100%;
 }
 
 .actions-header__item span {
@@ -227,6 +238,30 @@ body {
 
 /* *============ header - adaptive ==============* */
 
+@media (max-width: 439.99px) {
+   .header__container {
+      padding-left: 5px;
+      padding-right: 5px;
+      column-gap: 20px;
+   }
+
+   .actions-header {
+      column-gap: 10px;
+   }
+}
+
+@media (min-width: 440px) {
+   .header__logo {
+      font-size: 28px;
+   }
+}
+
+@media (min-width: 768px) {
+   .header__logo {
+      font-size: 30px;
+   }
+}
+
 @media (max-width: 991.98px) {
    .header__container {
       min-height: 50px;
@@ -240,7 +275,7 @@ body {
       height: 100%;
       overflow: auto;
       padding: 70px 15px 30px;
-      background-color: rgb(198, 165, 121);
+      background-color: #2c241c;
       transition: left 0.3s linear;
    }
 
@@ -252,7 +287,7 @@ body {
       left: -100%;
       width: 100%;
       height: 50px;
-      background-color: #b99260;
+      background-color: #846347;
       transition: left 0.3s linear;
    }
 
@@ -268,6 +303,8 @@ body {
    }
 
    .menu__link {
+      text-align: end;
+      color: #fbf8ef;
       font-size: 28px;
    }
 
@@ -292,6 +329,7 @@ body {
 
    .sub-menu__link {
       text-align: end;
+      background-color: #846347;
    }
 
    .icon-menu {
@@ -349,38 +387,27 @@ body {
       transform: rotate(-45deg);
    }
 }
-
-@media (max-width: 439.99px) {
-   .header__container {
-      padding-left: 5px;
-      padding-right: 5px;
-      column-gap: 20px;
-   }
-   .header__logo {
-      font-size: 24px;
-   }
-
-   .actions-header {
-      column-gap: 10px;
+@media (min-width: 992px) {
+   .menu__link {
+      text-align: center;
    }
 }
 
 /* *============================== hero ============================* */
 .hero {
-   background-color: #502203;
+   background-color: #2c241c;
    font-family: 'Cormorant Infant', serif;
    color: #fff;
+   margin-bottom: 70px;
 }
 
 .hero__container {
    position: relative;
    display: flex;
+   align-items: center;
    flex-direction: column;
+   row-gap: 30px;
    padding: 70px 10px;
-}
-
-.hero__container > * {
-   margin-bottom: 30px;
 }
 
 .left-path-hero > * {
@@ -388,10 +415,11 @@ body {
 }
 
 .left-path-hero__title {
-   font-family: 'Cormorant Infant', serif;
+   font-family: 'Merriweather', sans-serif;
+   font-weight: 500;
+   font-style: italic;
    font-size: 50px;
    line-height: 1.29;
-   font-weight: 700;
    text-align: center;
 }
 
@@ -433,15 +461,17 @@ body {
 }
 
 .hero__img {
-   align-self: center;
-   flex: 0 0 36.7%;
-   padding: 28px 20px;
+   flex: 0 0 100%;
+   min-width: 300px;
+   max-width: 350px;
+   aspect-ratio: 1 / 1.5;
+   padding: 15px 10px;
    border-radius: 215px;
+   overflow: hidden;
    border: 1px solid #ffffff;
 }
 
-.hero__img img {
-   width: 100%;
+.hero__img > img {
    border-radius: 195px;
    overflow: hidden;
 }
@@ -485,18 +515,30 @@ body {
 .decor-img-left img,
 .decor-img-right,
 .decor-img-right img {
+   z-index: 0;
    display: none;
 }
 
-/* *========== header - adaptive ===============* */
+/* *========== hero - adaptive ===============* */
 
 @media (min-width: 440px) {
    .hero__container {
       padding: 80px 10px 40px;
    }
 
+   .hero__img {
+      flex: 0 0 100%;
+      max-width: 380px;
+      aspect-ratio: 1 / 1.45;
+   }
+
    .left-path-hero__title {
       font-size: 56px;
+   }
+
+   .right-path-hero {
+      max-width: 70%;
+      flex: 0 1 70%;
    }
 
    .right-path-hero > * {
@@ -520,28 +562,31 @@ body {
    .hero__container {
       flex-direction: row;
       justify-content: center;
+      align-items: center;
       row-gap: 30px;
       flex-wrap: wrap;
+   }
+
+   .hero__img {
+      flex: 0 0 47%;
+      aspect-ratio: 1 / 1.36;
+      align-self: self-start;
+      padding: 28px 20px;
    }
 
    .left-path-hero {
       flex: 1 0 100%;
    }
 
-   .hero__img {
-      flex: 0 1 35%;
-   }
-
    .right-path-hero {
-      flex: 0 1 40%;
+      flex: 0 1 47%;
       align-self: stretch;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      align-items: flex-end;
       row-gap: 20px;
       padding-top: 75px;
-      padding-left: 30px;
+      padding-left: 25px;
       padding-bottom: 85px;
    }
 }
@@ -549,6 +594,8 @@ body {
 @media (min-width: 992px) {
    .hero__container {
       flex-wrap: nowrap;
+      justify-content: space-between;
+      align-items: flex-start;
       padding: 200px 15px 55px;
    }
 
@@ -559,6 +606,7 @@ body {
    .left-path-hero {
       flex: 0 0 31.625%;
       padding-top: 57px;
+      padding-bottom: 165px;
       padding-right: 30px;
       padding-left: 15px;
    }
@@ -574,11 +622,13 @@ body {
    }
 
    .hero__img {
-      flex: 0 0 36.7%;
+      max-width: 38%;
+      flex: 0 1 38%;
+      aspect-ratio: 1 / 1.36;
    }
 
    .right-path-hero {
-      flex: 0 0 31.625%;
+      flex: 1 0 30%;
       row-gap: 20px;
       padding-top: 75px;
       padding-bottom: 183px;
@@ -592,7 +642,7 @@ body {
 @media (min-width: 1200px) {
    .left-path-hero {
       padding-right: 45px;
-      padding-left: 0px;
+      padding-left: 0;
    }
 
    .left-path-hero__title {
@@ -613,14 +663,14 @@ body {
 
    .decor-line-left {
       top: 28px;
-      left: -373px;
-      background: url('../img/hero/hero-bg-1.webp') 0 0 no-repeat;
+      right: 100%;
+      background: url('../img/hero/webp/hero-decor-img-1.webp') 0 0 no-repeat;
    }
 
    .decor-line-right {
-      top: 308px;
-      right: -373px;
-      background: url('../img/hero/hero-decor-bg-right.webp') 0 0 no-repeat;
+      bottom: 86px;
+      left: 100%;
+      background: url('../img/hero/webp/hero-decor-img-2.webp') 0 0 no-repeat;
    }
 
    .decor-img-left {
@@ -629,7 +679,7 @@ body {
       height: 215px;
       position: absolute;
       bottom: 0;
-      left: -170px;
+      right: 93%;
       border-radius: 195px 195px 0 0;
       border-top: 1px solid #fff;
       border-left: 1px solid #fff;
@@ -649,7 +699,7 @@ body {
       height: 371px;
       position: absolute;
       bottom: 53px;
-      right: -335px;
+      left: 106%;
       border-radius: 215px;
       padding: 17px 12px;
       border: 1px solid #fff;
@@ -662,37 +712,223 @@ body {
    }
 }
 
-/* * =================== section ============================* */
+/* * =================== about ============================* */
+
+.about__container {
+   padding-left: 10px;
+   padding-right: 10px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   row-gap: 30px;
+}
+
 .block-header {
+   flex: 1 1 100%;
    font-family: 'Cormorant Infant', serif;
    font-weight: 700;
+   text-align: center;
 }
 
 .block-header > * {
-   margin-bottom: 27px;
+   margin-bottom: 20px;
 }
 
 .block-header__label {
-   color: #d58417;
+   text-transform: uppercase;
+   color: #a05103;
 }
+
 .block-header__title {
-   font-size: 64px;
+   font-size: 34px;
+   text-transform: capitalize;
    color: #000;
-   margin-bottom: 30px;
 }
-.block-header__text > p {
-   font-size: 30px;
+
+.block-header__text--about > * {
+   margin-bottom: 10px;
+}
+
+.block-header__text {
+   font-size: 22px;
    line-height: 1.4;
    color: #606060;
-   margin-bottom: 10px;
+}
+
+.img-block {
+   flex: 1 1 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.img-block__img {
+   min-width: 300px;
+   max-width: 350px;
+   aspect-ratio: 1 / 1.5;
+   border: 1px solid #000;
+   border-radius: 235px;
+   padding: 15px 10px;
+}
+
+.img-block__img > img {
+   border-radius: 235px;
+}
+
+.img-block__img--small {
+   display: none;
+}
+
+/* * ================== about - adaptive ================* */
+@media (min-width: 440px) {
+   .about__container > * {
+      margin-bottom: 0;
+   }
+
+   .about__block-header {
+      flex: 0 1 90%;
+   }
+
+   .block-header__title {
+      font-size: 38px;
+   }
+
+   .block-header__text {
+      font-size: 26px;
+   }
+
+   .img-block__img {
+      min-width: 350px;
+      max-width: 380px;
+      aspect-ratio: 1 / 1.45;
+   }
+}
+
+@media (min-width: 768px) {
+   .about__container {
+      min-height: 530px;
+      position: relative;
+      padding-left: 15px;
+      padding-right: 15px;
+      align-items: center;
+      flex-wrap: nowrap;
+      justify-content: center;
+      column-gap: 30px;
+      row-gap: 0;
+   }
+   .about__block-header {
+      flex: 0 1 47%;
+   }
+
+   .block-header__title {
+      font-size: 46px;
+   }
+
+   .img-block {
+      flex: 0 1 47.7%;
+      align-self: flex-start;
+   }
+}
+
+@media (min-width: 992px) {
+   .about__container {
+      max-width: 1135px;
+      column-gap: 50px;
+   }
+
+   .about__block-header {
+      flex: 0 1 47%;
+   }
+
+   .img-block__img {
+      min-width: 380px;
+      max-width: 400px;
+   }
+}
+
+@media (min-width: 1200px) {
+   .about__container {
+      display: flex;
+      justify-content: space-between;
+      column-gap: 75px;
+      padding-bottom: 30px;
+   }
+
+   .block-header {
+      flex: 0 0 45.5%;
+   }
+
+   .block-header > * {
+      margin-bottom: 27px;
+   }
+
+   .block-header__label {
+      text-transform: uppercase;
+      color: #a05103;
+   }
+
+   .block-header__title {
+      font-size: 60px;
+      text-transform: capitalize;
+      color: #000;
+      margin-bottom: 30px;
+   }
+
+   .block-header__text > p {
+      font-size: 30px;
+      line-height: 1.4;
+      color: #606060;
+      margin-bottom: 10px;
+   }
+
+   .img-block {
+      display: flex;
+      align-items: center;
+      column-gap: 30px;
+   }
+
+   .img-block__img {
+      padding: 0;
+      border: 1px solid #000;
+   }
+
+   .img-block__img--small {
+      min-width: 177px;
+      aspect-ratio: 1/ 1.89;
+      display: block;
+      border-radius: 235px;
+      flex: 0 1 33.5%;
+      max-height: 336px;
+   }
+
+   .img-block__img--small > img {
+      border-radius: 235px;
+      margin-top: 14px;
+      margin-left: -10px;
+   }
+
+   .img-block__img--large {
+      min-width: 308px;
+      aspect-ratio: 1 / 1.64;
+      border-radius: 235px;
+      flex: 0 1 58.44%;
+      max-height: 505px;
+   }
+
+   .img-block__img--large > img {
+      border-radius: 154px;
+      margin-top: 24px;
+      margin-left: -10px;
+   }
 }
 
 /* ------------------- Last-child -------------------------- */
 
 .block-header > *:last-child,
 .block-header__text > p:last-child,
-.hero__container > *:last-child,
 .left-path-hero > *:last-child,
-.right-path-hero > *:last-child {
+.right-path-hero > *:last-child,
+.about__container > *:last-child,
+.block-header__text--about > *:last-child {
    margin-bottom: 0;
 }
