--- a/lesson-18/css/style.css
+++ b/lesson-18/css/style.css
@@ -2,928 +2,12 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather:regular,500,600,700,500italic,600italic,700italic&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Ephesis:regular&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Poppins:500,600,700&display=swap');
 /* Скидаємо стилі */
 @import url('reset.css');
 
-/* Основні стилі */
+/* Обгортка */
 @import url('wrapper.css');
 
-/* logo - Merriweather 700 italic */
-/* nav -   Merriweather Regular */
-/* h1 - Cormorant Infant 700 */
-/* btn - Cormorant Infant 600 */
-/* text - Cormorant Infant 700 */
-
-/* -------------------------------------------- */
-body {
-   background-color: #fbf8ef;
-   color: #000000;
-   font-family: 'Cormorant Infant', serif;
-   font-size: 20px;
-}
-
-[class*='__container'] {
-   max-width: 1200px;
-   padding: 0 15px;
-   margin: 0 auto;
-}
-
-.footer__container {
-   padding-top: 10px;
-   padding-bottom: 10px;
-}
-
-.footer__name {
-   font-family: 'Ephesis', cursive;
-   font-size: 30px;
-   line-height: 2;
-   text-align: center;
-}
-
-/* example */
-/* @media (any-hover: hover) {
-   a:hover {
-      color: blueviolet;
-   }
-} */
-
-/* *============================== header ============================* */
-.header {
-   /* ! */
-   z-index: 50;
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   background-color: #fff;
-}
-
-.header__container {
-   min-height: 100px;
-   display: flex;
-   align-items: center;
-   gap: 30px;
-   padding-top: 10px;
-   padding-bottom: 10px;
-}
-
-.header__logo {
-   z-index: 5;
-   position: relative;
-   flex: 0 0 auto;
-   font-family: 'Merriweather', sans-serif;
-   font-weight: 700;
-   font-style: italic;
-   font-size: 20px;
-}
-
-.menu {
-   flex: 1 1 auto;
-}
-
-.menu__list {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   column-gap: 36px;
-   row-gap: 10px;
-   flex-wrap: wrap;
-}
-
-.menu__item--parent {
-   position: relative;
-}
-
-.menu__link {
-   font-family: 'Merriweather', sans-serif;
-   font-size: 20px;
-   color: #000;
-   padding: 5px;
-   line-height: 1.2;
-   border-bottom: 1px solid transparent;
-   outline: 1px solid transparent;
-   transition: all 0.3s linear;
-}
-
-@media (any-hover: hover) {
-   .menu__link:hover {
-      color: #d58417;
-      border-bottom: 1px solid;
-   }
-}
-
-.menu__link:focus {
-   color: #d58417;
-   border-bottom: 1px solid;
-   outline: 1px solid;
-}
-
-.menu__item--parent > .menu__link {
-   margin-left: auto;
-   display: flex;
-   align-items: baseline;
-   justify-content: flex-end;
-   column-gap: 5px;
-   width: max-content;
-}
-
-.menu__link img {
-   width: 16px;
-   height: 8px;
-   transform: rotateZ(0deg);
-   transition: transform 0.3s linear;
-}
-
-@media (any-hover: hover) {
-   .menu__item--parent:hover > .menu__link > img {
-      transform: rotateZ(180deg);
-   }
-}
-
-.sub-menu {
-   position: absolute;
-   left: 0;
-   top: 100%;
-   width: max-content;
-   height: max-content;
-   padding-top: 5px;
-   opacity: 0;
-   visibility: hidden;
-   pointer-events: none;
-   transform: translate(0, 5%);
-   transition: all 0.3s linear;
-}
-
-@media (any-hover: hover) {
-   .menu__item--parent:hover > .sub-menu {
-      opacity: 1;
-      visibility: visible;
-      pointer-events: all;
-      transform: translate(0, 0);
-   }
-}
-
-.sub-menu__list {
-   min-width: 100px;
-}
-
-.sub-menu__item:not(:last-child) {
-   margin-bottom: 1px;
-}
-
-.sub-menu__item {
-   margin-bottom: 1px;
-}
-
-.sub-menu__link {
-   font-family: 'Merriweather', sans-serif;
-   color: #000;
-   min-width: 100%;
-   padding: 15px 10px;
-   background-color: #825e3e;
-   transition: all 0.3s linear;
-}
-
-@media (any-hover: hover) {
-   .sub-menu__link:hover {
-      background-color: #af621f;
-      color: #fff;
-   }
-}
-
-.actions-header {
-   z-index: 5;
-   position: relative;
-   flex: 0 0 auto;
-   display: flex;
-   align-items: center;
-   column-gap: 23px;
-}
-
-.actions-header__item {
-   position: relative;
-   flex: 0 0 32px;
-   height: 32px;
-   transition: transform 0.3s linear;
-}
-
-@media (any-hover: hover) {
-   .actions-header__item:hover {
-      transform: scale(1.1);
-   }
-}
-
-.actions-header__item span {
-   position: absolute;
-   top: 0;
-   right: 0;
-   background-color: #ff3333;
-   border-radius: 50%;
-   font-size: 7px;
-   color: #fff;
-   min-width: 12px;
-   text-align: center;
-   line-height: 1.7;
-}
-
-.menu__img {
-   width: 16px;
-   height: 8px;
-}
-
-.icon-menu {
-   display: none;
-}
-
-/* *============ header - adaptive ==============* */
-
-@media (max-width: 439.99px) {
-   .header__container {
-      padding-left: 5px;
-      padding-right: 5px;
-      column-gap: 20px;
-   }
-
-   .actions-header {
-      column-gap: 10px;
-   }
-}
-
-@media (min-width: 440px) {
-   .header__logo {
-      font-size: 28px;
-   }
-}
-
-@media (min-width: 768px) {
-   .header__logo {
-      font-size: 30px;
-   }
-}
-
-@media (max-width: 991.98px) {
-   .header__container {
-      min-height: 50px;
-   }
-
-   .menu__body {
-      position: fixed;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      padding: 70px 15px 30px;
-      background-color: #2c241c;
-      transition: left 0.3s linear;
-   }
-
-   .menu__body:before {
-      content: '';
-      z-index: 3;
-      position: fixed;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 50px;
-      background-color: #846347;
-      transition: left 0.3s linear;
-   }
-
-   .menu-open .menu__body,
-   .menu-open .menu__body:before {
-      left: 0;
-   }
-
-   .menu__list {
-      flex-direction: column;
-      row-gap: 20px;
-      align-items: flex-end;
-   }
-
-   .menu__link {
-      text-align: end;
-      color: #fbf8ef;
-      font-size: 28px;
-   }
-
-   .menu__item--parent {
-      width: 100%;
-   }
-
-   .menu__item--parent img {
-      display: none;
-   }
-
-   .sub-menu {
-      width: 100%;
-      font-size: 26px;
-      padding-top: 20px;
-      position: relative;
-      opacity: 1;
-      visibility: visible;
-      pointer-events: all;
-      transform: translate(0);
-   }
-
-   .sub-menu__link {
-      text-align: end;
-      background-color: #846347;
-   }
-
-   .icon-menu {
-      z-index: 5;
-      position: relative;
-      display: block;
-      flex: 0 0 30px;
-      height: 18px;
-   }
-
-   .icon-menu::before,
-   .icon-menu::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      background-color: #000;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-   }
-
-   .icon-menu::before {
-      top: 0;
-   }
-
-   .icon-menu::after {
-      bottom: 0;
-   }
-
-   .icon-menu span {
-      position: absolute;
-      top: 50%;
-      left: 0;
-      margin-top: -1px;
-      width: 100%;
-      height: 2px;
-      background-color: #000;
-      transition: transform 0.3s linear;
-   }
-
-   .menu-open .icon-menu span {
-      transform: scale(0);
-   }
-
-   .menu-open .icon-menu::before {
-      top: 50%;
-      margin-top: -1px;
-
-      transform: rotate(45deg);
-   }
-
-   .menu-open .icon-menu::after {
-      bottom: 50%;
-      margin-bottom: -1px;
-      transform: rotate(-45deg);
-   }
-}
-@media (min-width: 992px) {
-   .menu__link {
-      text-align: center;
-   }
-}
-
-/* *============================== hero ============================* */
-.hero {
-   background-color: #2c241c;
-   font-family: 'Cormorant Infant', serif;
-   color: #fff;
-   margin-bottom: 70px;
-}
-
-.hero__container {
-   position: relative;
-   display: flex;
-   align-items: center;
-   flex-direction: column;
-   row-gap: 30px;
-   padding: 70px 10px;
-}
-
-.left-path-hero > * {
-   margin-bottom: 15px;
-}
-
-.left-path-hero__title {
-   font-family: 'Merriweather', sans-serif;
-   font-weight: 500;
-   font-style: italic;
-   font-size: 50px;
-   line-height: 1.29;
-   text-align: center;
-}
-
-.left-path-hero__btn {
-   position: relative;
-   font-size: 24px;
-   font-weight: 600;
-   padding: 15px 28px;
-   border: 1px solid #fff;
-   background-color: transparent;
-   border-radius: 4px;
-   display: block;
-   width: max-content;
-   margin-left: auto;
-   margin-right: auto;
-}
-
-.left-path-hero__btn::before {
-   content: '';
-   position: absolute;
-   top: 12px;
-   left: -8px;
-   border-radius: 4px;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(255, 255, 255, 0.06);
-   transition: all 0.3s linear;
-}
-
-.menu-open .left-path-hero__btn {
-   z-index: -1;
-}
-
-@media (any-hover: hover) {
-   .left-path-hero__btn:hover:before {
-      top: 0;
-      left: 0;
-   }
-}
-
-.hero__img {
-   flex: 0 0 100%;
-   min-width: 300px;
-   max-width: 350px;
-   aspect-ratio: 1 / 1.5;
-   padding: 15px 10px;
-   border-radius: 215px;
-   border: 1px solid #ffffff;
-}
-
-.hero__img > img {
-   border-radius: 195px;
-}
-
-.right-path-hero > * {
-   margin-bottom: 15px;
-}
-
-.right-path-hero__upper-content {
-   font-weight: 700;
-   font-size: 22px;
-   line-height: 1.48;
-}
-
-.right-path-hero__down-content {
-   position: relative;
-   font-weight: 600;
-   font-size: 28px;
-   line-height: 1.2;
-   width: 255px;
-   padding-left: 10px;
-}
-
-.menu-open .right-path-hero__down-content {
-   z-index: -1;
-}
-
-.right-path-hero__down-content::before {
-   content: '';
-   position: absolute;
-   top: 8px;
-   bottom: 8px;
-   left: 0;
-   width: 1px;
-   background-color: #fff;
-}
-
-.decor-line-left,
-.decor-line-right,
-.decor-img-left,
-.decor-img-left img,
-.decor-img-right,
-.decor-img-right img {
-   z-index: 0;
-   display: none;
-}
-
-/* *========== hero - adaptive ===============* */
-
-@media (min-width: 440px) {
-   .hero__container {
-      padding: 80px 10px 40px;
-   }
-
-   .hero__img {
-      flex: 0 0 100%;
-      max-width: 380px;
-      aspect-ratio: 1 / 1.45;
-   }
-
-   .left-path-hero__title {
-      font-size: 56px;
-   }
-
-   .right-path-hero {
-      max-width: 70%;
-      flex: 0 1 70%;
-   }
-
-   .right-path-hero > * {
-      margin-bottom: 20px;
-   }
-
-   .right-path-hero__down-content {
-      margin-left: auto;
-   }
-}
-
-@media (min-width: 768px) {
-   .hero__container {
-      padding-top: 100px;
-   }
-
-   .hero__container > * {
-      margin-bottom: 0;
-   }
-
-   .hero__container {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      row-gap: 30px;
-      flex-wrap: wrap;
-   }
-
-   .hero__img {
-      flex: 0 0 47%;
-      aspect-ratio: 1 / 1.36;
-      align-self: self-start;
-      padding: 28px 20px;
-   }
-
-   .left-path-hero {
-      flex: 1 0 100%;
-   }
-
-   .right-path-hero {
-      flex: 0 1 47%;
-      align-self: stretch;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      row-gap: 20px;
-      padding-top: 75px;
-      padding-left: 25px;
-      padding-bottom: 85px;
-   }
-}
-
-@media (min-width: 992px) {
-   .hero__container {
-      flex-wrap: nowrap;
-      justify-content: space-between;
-      align-items: flex-start;
-      padding: 200px 15px 55px;
-   }
-
-   .hero__container > * {
-      margin-bottom: 0;
-   }
-
-   .left-path-hero {
-      flex: 0 0 31.625%;
-      padding-top: 57px;
-      padding-bottom: 165px;
-      padding-right: 30px;
-      padding-left: 15px;
-   }
-
-   .left-path-hero__title {
-      font-size: 64px;
-      text-align: start;
-   }
-
-   .left-path-hero__btn {
-      margin-left: 0;
-      margin-right: 0;
-   }
-
-   .hero__img {
-      max-width: 38%;
-      flex: 0 1 38%;
-      aspect-ratio: 1 / 1.36;
-   }
-
-   .right-path-hero {
-      flex: 1 0 30%;
-      row-gap: 20px;
-      padding-top: 75px;
-      padding-bottom: 183px;
-   }
-
-   .right-path-hero__down-content {
-      font-size: 30px;
-   }
-}
-
-@media (min-width: 1200px) {
-   .left-path-hero {
-      padding-right: 45px;
-      padding-left: 0;
-   }
-
-   .left-path-hero__title {
-      font-size: 78px;
-   }
-
-   .right-path-hero__down-content {
-      font-size: 32px;
-   }
-
-   .decor-line-left,
-   .decor-line-right {
-      position: absolute;
-      display: block;
-      width: 374px;
-      height: 470px;
-   }
-
-   .decor-line-left {
-      top: 28px;
-      right: 100%;
-      background: url('../img/hero/webp/hero-decor-img-1.webp') 0 0 no-repeat;
-   }
-
-   .decor-line-right {
-      bottom: 86px;
-      left: 100%;
-      background: url('../img/hero/webp/hero-decor-img-2.webp') 0 0 no-repeat;
-   }
-
-   .decor-img-left {
-      display: block;
-      width: 240px;
-      height: 215px;
-      position: absolute;
-      bottom: 0;
-      right: 93%;
-      border-radius: 195px 195px 0 0;
-      border-top: 1px solid #fff;
-      border-left: 1px solid #fff;
-      border-right: 1px solid #fff;
-   }
-
-   .decor-img-left img {
-      display: block;
-      margin-left: 6px;
-      border-radius: 195px 195px 0 0;
-      overflow: hidden;
-   }
-
-   .decor-img-right {
-      display: block;
-      width: 261px;
-      height: 371px;
-      position: absolute;
-      bottom: 53px;
-      left: 106%;
-      border-radius: 215px;
-      padding: 17px 12px;
-      border: 1px solid #fff;
-   }
-
-   .decor-img-right img {
-      display: block;
-      border-radius: 195px;
-      overflow: hidden;
-   }
-}
-
-/* * =================== about ============================* */
-
-.about__container {
-   padding-left: 10px;
-   padding-right: 10px;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   row-gap: 30px;
-}
-
-.block-header {
-   flex: 1 1 100%;
-   font-family: 'Cormorant Infant', serif;
-   font-weight: 700;
-   text-align: center;
-}
-
-.block-header > * {
-   margin-bottom: 20px;
-}
-
-.block-header__label {
-   text-transform: uppercase;
-   color: #a05103;
-}
-
-.block-header__title {
-   font-size: 34px;
-   text-transform: capitalize;
-   color: #000;
-}
-
-.block-header__text--about > * {
-   margin-bottom: 10px;
-}
-
-.block-header__text {
-   font-size: 22px;
-   line-height: 1.4;
-   color: #606060;
-}
-
-.img-block {
-   flex: 1 1 100%;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-}
-
-.img-block__img {
-   min-width: 300px;
-   max-width: 350px;
-   aspect-ratio: 1 / 1.5;
-   border: 1px solid #000;
-   border-radius: 235px;
-   padding: 15px 10px;
-}
-
-.img-block__img > img {
-   border-radius: 235px;
-}
-
-.img-block__img--small {
-   display: none;
-}
-
-/* * ================== about - adaptive ================* */
-@media (min-width: 440px) {
-   .about__container > * {
-      margin-bottom: 0;
-   }
-
-   .about__block-header {
-      flex: 0 1 90%;
-   }
-
-   .block-header__title {
-      font-size: 38px;
-   }
-
-   .block-header__text {
-      font-size: 26px;
-   }
-
-   .img-block__img {
-      min-width: 350px;
-      max-width: 380px;
-      aspect-ratio: 1 / 1.45;
-   }
-}
-
-@media (min-width: 768px) {
-   .about__container {
-      min-height: 530px;
-      position: relative;
-      padding-left: 15px;
-      padding-right: 15px;
-      align-items: center;
-      flex-wrap: nowrap;
-      justify-content: center;
-      column-gap: 30px;
-      row-gap: 0;
-   }
-   .about__block-header {
-      flex: 0 1 47%;
-   }
-
-   .block-header__title {
-      font-size: 46px;
-   }
-
-   .img-block {
-      flex: 0 1 47.7%;
-      align-self: flex-start;
-   }
-}
-
-@media (min-width: 992px) {
-   .about__container {
-      max-width: 1135px;
-      column-gap: 50px;
-   }
-
-   .about__block-header {
-      flex: 0 1 47%;
-   }
-
-   .img-block__img {
-      min-width: 380px;
-      max-width: 400px;
-   }
-}
-
-@media (min-width: 1200px) {
-   .about__container {
-      display: flex;
-      justify-content: space-between;
-      column-gap: 75px;
-      padding-bottom: 30px;
-   }
-
-   .block-header {
-      flex: 0 0 45.5%;
-   }
-
-   .block-header > * {
-      margin-bottom: 27px;
-   }
-
-   .block-header__label {
-      text-transform: uppercase;
-      color: #a05103;
-   }
-
-   .block-header__title {
-      font-size: 60px;
-      text-transform: capitalize;
-      color: #000;
-      margin-bottom: 30px;
-   }
-
-   .block-header__text > p {
-      font-size: 30px;
-      line-height: 1.4;
-      color: #606060;
-      margin-bottom: 10px;
-   }
-
-   .img-block {
-      display: flex;
-      align-items: center;
-      column-gap: 30px;
-   }
-
-   .img-block__img {
-      padding: 0;
-      border: 1px solid #000;
-   }
-
-   .img-block__img--small {
-      min-width: 177px;
-      aspect-ratio: 1/ 1.89;
-      display: block;
-      flex: 0 1 33.5%;
-      max-height: 336px;
-   }
-
-   .img-block__img--small > img {
-      margin-top: 14px;
-      margin-left: -10px;
-   }
-
-   .img-block__img--large {
-      min-width: 308px;
-      aspect-ratio: 1 / 1.64;
-      flex: 0 1 58.44%;
-      max-height: 505px;
-   }
-
-   .img-block__img--large > img {
-      border-radius: 154px;
-      margin-top: 24px;
-      margin-left: -10px;
-   }
-}
-
-/* ------------------- Last-child -------------------------- */
-
-.block-header > *:last-child,
-.block-header__text > p:last-child,
-.left-path-hero > *:last-child,
-.right-path-hero > *:last-child,
-.about__container > *:last-child,
-.block-header__text--about > *:last-child {
-   margin-bottom: 0;
-}
+/* Основні стилі */
+@import url('base.css');
